# git2page

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  niyoseris.html
.github/workflows/: deploy.yml  pages.yml
src/: main.rs
static/: app.js  index.html
wasm/: Cargo.toml
wasm/src/: lib.rs
